<resources>
    <string name="app_name">RCUBSyllabus</string>
    <string name="tempadid">ca-app-pub-9323377994714094/1107399513</string>
    <string name="interadid">ca-app-pub-9323377994714094/4672800501</string>
    <string name="first">First Sem</string>
    <string name="second">Second Sem</string>
    <string name="third">Third Sem</string>
    <string name="fourth">Fourth Sem</string>
    <string name="fifth">Fifth Sem</string>
    <string name="sixth">Sixth Sem</string>
    <string name="maths">Mathematics-I</string>
    <string name="english1">Basic English</string>
    <string name="compfundamentals">Computer Fundamentals</string>
    <string name="C">Programming in C</string>
    <string name="ic">Indian Constitution</string>
    <string name="account">Financial Accountancy</string>
    <string name="finman">Financial Management</string>
    <string name="mat2">Mathematics -II</string>
    <string name="eng2">Add. English</string>
    <string name="c2">Data Structures Using C</string>
    <string name="dlcs">Digital Logic and  Computer Design</string>
    <string name="hres">Human Rights and Environmental Studies</string>
    <string name="coa">Computer Organization and Architecture</string>
    <string name="cpp">OOPS Using C++</string>
    <string name="dms">Discrete Mathematical Structures</string>
    <string name="unix">Introduction to UNIX</string>
    <string name="pd">Personality Development and Communication Skills</string>
    <string name="daa">Design and Analysis of Algorithms</string>
    <string name="java">Programming Using Java</string>
    <string name="it">IT Infrastructure and Management</string>
    <string name="se">Software Engineering</string>
    <string name="vb">VB.Net</string>
    <string name="os">Operating System</string>
    <string name="wp">Web Programming</string>
    <string name="dbms">Database Management Systems</string>
    <string name="cn">Computer Networks</string>
    <string name="cnet">.Net Framework Using C#</string>
    <string name="spt">Software Practices and Testing</string>
    <string name="bi">Business Intelligence</string>
    <string name="j2ee">J2EE</string>
    <string name="lab">Lab1: J2EE and Software Testing Laboratory</string>
    <string name="project">Project and viva - voce</string>
    <string name="math1">
        "UNIT I\n\n"
        "Complex Numbers:Complex Numbers; Conjugate of a complex number; modulus of a complex Number;"
        "geometrical representation of complex number; De Moivere’s theorem; nth roots of a complex number.\n\n"

        "UNIT II\n\n"
        "Sequence and Series: Arithmetic Progression (A.P.), Arithmetic Mean (A.M.), Geometric Progression"
        "(G.P.), general term of a G.P., sum of n terms of a G.P. Arithmetic and geometric series, infinite G.P. and"
        "its sum, geometric mean (G.M.). Relation between A.M. and G.M.\n\n"

        "UNIT III\n\n"
        "Binomial Theorem: Statement of the binomial theorem for positive integral indices, general and middle"
        "term in binomial expansion, simple applications."
        "Quadratic Equations: Solution of Quadratic Equations by factor method, complete square method, and"
        "Discriminant method, Relation of the roots.\n\n"

        "UNIT IV\n\n"
        "Introduction to Trigonometry: Trigonometry, The theorem of Pythagoras, Trigonometric ratios of acute"
        "angles, Evaluating trigonometric ratios, Solution of right-angled triangles, Angles of elevation and"
        "depression, Sine and cosine rules, Area of any triangle."
        "Vectors: Scalars and vectors, addition of two vectors, vector subtraction, scalar and vector products.\n\n"

        "UNIT V\n\n"
        "Co-ordinate Geometry: Distance formulae, section formulae, shifting of origin. Slope of a line and angle"
        "between two lines. Various forms of equations of a line: parallel to axes, point slope form, slope-intercept"
        "form, two-point form, intercepts form and normal form. General equation of a line.Equation of family of"
        "lines passing through the point of intersection of two lines.Distance of a point from a line.\n\n"
    </string>
    <string name="eng">
        "<u>BASIC ENGLISH\n\n</u>"
        "Text: Seven One-Act Plays (Ed), K.S. Ramamurthy: OUP\n"
        "Only the following plays are to be studied.\n"
        "1. The Seven Slaves - A. Ball\n"
        "2. One Good Turn – A.E.M. Bayliss\n"
        "3. Night Watches – Allan Monkhouse\n"
        "4. The Unexpected – Ella Adkins\n"
        "5. Sunday Costs Five Pesos – Josephina Niggli\n\n"
        "Grammar and Composition"\n\n"
        "Modals (Making Sentences using Modals)\n"
        "Sentence Linkers (Making Sentences using Linkers)\n"
        "Use of words, phrases and idioms\n"
        "Describing a situation (Marriage, Birthday, Local fair, temple festivals, national\n"
        "festivals, Funerals etc.)\n\n"

        "Pattern of Question Paper\n"

        "(80 Marks per paper of three hours and 20 Marks for I.A)\n"
        "1) Objective type questions on the play\n"
        "2) Reference to Context\n"
        "3) Essay type question on the plays (one out of two)\n"
        "4) Essay type question on the plays (one out of two)\n"
        "5) Short Notes on the plays (two out of four)\n"
        "6) A) Modals Make sentences using given modals 5 out of 7\n"
        "B) Sentence Linkers\n"
        "Make sentences using given sentence linkers 5 out of 7\n"
        "7) A) Use of words, phrases and idioms\n"
        "3 Marks for Use of Words, 3 Marks for Phrases and"
        "4 marks for Idioms and Phrases\n"
        "B) Describing a situation (about 200 words)\n\n"
    </string>
    <string name="compfun">
     "UNIT I\n\n"
        "Introduction: Computer, data processing, characteristic features of computers, computer evolution to"
        "present form, computer generation."
        "Basic computer organization: Basic operations performed by computers, basic organization of computer"
        "system, input units and its functions, output units and its functions, storage units and its functions, types"
         "of storage.\n\n"

        "UNIT II\n\n"

        "Number systems: non-positional number system, positional number system, decimal, binary, octal, and"
        "hexadecimal number systems. Conversion from decimal to binary and vice-versa."
        "Computer Codes: Computer data, computer codes: representation of data in binary, commonly used"
        "computer codes, collating sequence."
        "Computer arithmetic: Basic arithmetic operations using binary numbers.\n\n"

        "UNIT III\n\n"
        "Processor and memory: Internal structure of processor, memory structure, types of processors, main"
        "memory organization, random access memory, read only memory, cache memory."
        "Secondary storage: secondary storage devices and their needs, commonly used secondary storage devices,"
        "sequential and direct access storage devices, basic principles of commonly used secondary storage"
        "devices (magnetic disk, optical disk, flash drives, memory card, disk array)."
        "IO devices: commonly used input output(IO) devices.\n\n"

        "UNIT IV\n\n"
        "Software: Software and its relationship with hardware, types of softwares, relationship among hardware,"
        "system software, application software and users of computer systems, steps involved in software"
        "development, firmware, middleware."
        "Application software case study: MS-Word: editing and formatting documents."
        "Overview of operating system: Definition, functions of operating system, concept of multiprogramming,"
        "multitasking, multithreading, multiprocessing, time-sharing, real time, single-user and multi-user operating"
        "system.\n\n"


        "UNIT V\n\n"
        "Windows OS- Basics of Windows, basic components of windows, icons, taskbar, activating windows,"
        "using desktop, title bar, running applications, exploring computer, managing files and folders, copying"
        "and moving files and folders. Control panel – display properties, adding and removing software and"
        "hardware.\n\n"
    </string>
    <string name="cc">
       "UNIT I\n\n"

       "Programming Languages and its Classification, Compiler, Interpreter, Linker, Loader."
        "Problem Solving: Problem Identification, Analysis, flowcharts, Pseudo codes and algorithms,"
        "Program Coding, Program Testing and Execution. Examples of flow charts and algorithms- Largest"
        "of three numbers, reversing the digits of an integer, base conversion, GCD of two integers,"
        "generating prime numbers, sine function computation, computing nth Fibonacci numbers.\n\n"

"UNIT II\n\n"
"Overview of C: C character set, identifiers and keywords, Data types, Constants and Variables,"
"Assignment statement, Symbolic constant, Structure of a C Program, printf(), scanf() Functions,"
"Operators and Expression: Arithmetic, relational, logical, bitwise, unary, assignment, shorthand"
"assignment operators, conditional operators and increment and decrement operators, Arithmetic"
"expressions, evaluation of arithmetic expression, type casting and conversion, operator hierarchy and"
"associativity.\n\n"

"UNIT III\n\n"
"Decision making and branching: Decision making with IF statement, IF-ELSE statement, Nested IF"
"statement, ELSE-IF ladder, switch statement, goto statement. Decision making and looping: For, while,"
"and do-while loop, jumps in loops - break, continue statement, Nested loops."
"Functions: Standard Mathematical functions, Input/output: Unformatted and formatted I/O function"
"in C. User defined functions: definition, prototype, Local and global variables, passing parameters,"
"recursion.\n\n"

"UNIT IV\n\n"
"Arrays, strings and pointers: Definition, types, initialization, processing an array, passing arrays to"
"functions, Array of Strings. String constant and variables, Declaration and initialization of string,"
"Input/output of string data, Storage classes in C: auto, extern, register and static storage class, their"
"scope, storage, and lifetime."
"String Handling: String Library Functions: strlen, strcat, strcmp, strcpy, strrev.\n\n"

"UNIT V\n\n"
"Structure amd Union: Definition of Structure, Declaring Structure, Accessing Structure Elements, Array"
"of Structure, Nesting of Structure. Definition of Union, declaring and using Union.Difference"
"between Structure amd Union."
"Error Handling during I/O Operations, Command Line Arguments, Documentation, debugging, C"
"Processors, Macros.\n\n"
    </string>
    <string name="i">
"UNIT I\n\n"
"Significance of the constitution: Making of the Constitution role of the Constituent Assembly, Salient"
"features, the Preamble, Citizenship, Procedure for amendment of the Constitution.\n\n"

"UNIT II\n\n"
"Fundamentals Rights: the Right to Equality, the Right to Freedom, the Right against Exploitation , the"
"Right to Freedom of Religion, Cultural and Educational Rights, the Right to Constitutional Remedies.\n\n"

"UNIT III\n\n"
"Nature of the Directive Principles of State Policy, difference between of Fundamental rights and Directive"
"principles of State Policy – Implementation of Directive Principles of State Policy, Fundamental Duties.\n\n"

"UNIT IV\n\n"
"Union Government – Powers and Functions of the President, the Prime Minister, Council of"
"Ministers.Composition, powers and functions of the Parliament, Organization of Judiciary, Jurisdiction of"
"the Supreme Court, Independence of Judiciary.\n\n"

"UNIT V\n\n"
"State Government – Powers and Functions of Governor, Chief Minister, Council of"
"Ministers.Composition, Powers and functions of State Legislature, Local Government and the"
"Constitution, Relation between the Union and the states.\n\n"
    </string>
</resources>