<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashishvz.rcubsyllabus.MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first"
        ads:layout_constraintBottom_toTopOf="@+id/button2"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintStart_toStartOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/second"
        ads:layout_constraintBottom_toTopOf="@+id/button3"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintStart_toStartOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/third"
        ads:layout_constraintBottom_toTopOf="@+id/button4"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintStart_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth"
        ads:layout_constraintBottom_toTopOf="@+id/button5"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="@+id/button5"
        app:layout_constraintStart_toStartOf="@+id/button5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth"
        ads:layout_constraintBottom_toTopOf="@+id/button6"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="@+id/button6"
        app:layout_constraintStart_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sixth"
        ads:layout_constraintBottom_toTopOf="@+id/adView"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="@+id/adView"
        app:layout_constraintStart_toStartOf="@+id/adView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/tempadid"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintHorizontal_bias="0.5"
        ads:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>
