<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ashishvz.rcubsyllabus.Sixthsem">

    <Button
        android:id="@+id/button34"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/spt"
        app:layout_constraintBottom_toTopOf="@+id/button35"
        app:layout_constraintEnd_toEndOf="@+id/button35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button35"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button35"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bi"
        app:layout_constraintBottom_toTopOf="@+id/button36"
        app:layout_constraintEnd_toEndOf="@+id/button36"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/button34" />

    <Button
        android:id="@+id/button36"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/j2ee"
        app:layout_constraintBottom_toTopOf="@+id/button37"
        app:layout_constraintEnd_toEndOf="@+id/button37"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button37"
        app:layout_constraintTop_toBottomOf="@+id/button35" />

    <Button
        android:id="@+id/button37"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/lab"
        app:layout_constraintBottom_toTopOf="@+id/button38"
        app:layout_constraintEnd_toEndOf="@+id/button38"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button38"
        app:layout_constraintTop_toBottomOf="@+id/button36" />

    <Button
        android:id="@+id/button38"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/project"
        app:layout_constraintBottom_toTopOf="@+id/adView7"
        app:layout_constraintEnd_toEndOf="@+id/adView7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/adView7"
        app:layout_constraintTop_toBottomOf="@+id/button37" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button38"
        ads:adSize="BANNER"
        ads:adUnitId="@string/tempadid"/>
</android.support.constraint.ConstraintLayout>
